# test_repo

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-MPSPDZ  README.md
Player-Data/: 258c9807.0  260b88e5.0  4b7678a5.0  4eb7f299.0  8df0544c.0  C0.key  C0.pem  C1.key  C1.pem  C10.key  C10.pem  C11.key  C11.pem  C12.key  C12.pem  C13.key  C13.pem  C14.key  C14.pem  C15.key  C15.pem  C16.key  C16.pem  C17.key  C17.pem  C18.key  C18.pem  C19.key  C19.pem  C2.key  C2.pem  C3.key  C3.pem  C4.key  C4.pem  C5.key  C5.pem  C6.key  C6.pem  C7.key  (+9 more)
benchmarks/: party_1_n_3_t_1_addr_0  party_2_n_3_t_1_addr_0  party_3_n_3_t_1_addr_0
inc/: config.h  main.h
inc/crypto/bilinear_group/: deserializer.h  group.h  matrix.h  serializer.h  thread_pool.h
inc/crypto/bookkeeping_proofs/: setup.h
inc/crypto/bookkeeping_proofs/create_entry/: out_types.hpp  prover.h  verifier.h
inc/crypto/bookkeeping_proofs/prove_entry/: out_types.hpp  prover.h  verifier.h
inc/crypto/bookkeeping_proofs/u_reg/: out_types.hpp  prover.h  verifier.h
inc/crypto/proofs/: out_funcs.hpp  prelude.hpp  tmatrix.hpp
inc/crypto/schemes/bls_sig/: scheme.h
inc/crypto/schemes/riss/: riss.h  scheme.h  sub_protocol.h
inc/crypto/schemes/secret_sharing/: commitments.h  polynomial.h  secret_sharing.h  share.h
inc/crypto/schemes/threshold_el_gamal/: helpers.h  participant.h  protocol.h
inc/crypto/schemes/tots/: scheme.h
inc/crypto/schemes/tsps/: key_gen.h  matrix_dist.h  matrix_serializer.h  protocol.h  setup.h  sign.h  verify.h
inc/home_operator/: protocol.h  structs.h
inc/networking/: bootstrapping.h  client.h  server.h
inc/networking/grpc/: bootstrap.h  dkg.h  el_gamal.h  riss.h  serialize.h  tsps.h
inc/networking/mpc/: connect.h  serialization.h
inc/networking/thread_channel/: safe_queue.h
inc/user/: protocol.h  structs.h
lib/GigaDORAM/: .gitignore  CMakeLists.txt  Dockerfile  p2.cerr
lib/GigaDORAM/circuits/: adder_32bit.txt
lib/GigaDORAM/doram/: 32bitadd_circuit.h  CMakeLists.txt  batcher.cpp  batcher.h  bit_manip_utils.h  block.h  bristol_fashion_array.cpp  bristol_fashion_array.h  builder.cpp  builder.h  debug.cpp  debug.h  doram_array.cpp  doram_array.h  globals.cpp  globals.h  local_permutation.h  ohtable_array.cpp  ohtable_array.h  optimal_cht.cpp  optimal_cht.h  oram.cpp  rep_array_unsliced.cpp  rep_array_unsliced.h  rep_net_io_channel.h  sh_obliv_shuffle.h  sh_riro_garble.h  sh_shuffle_array.h  stupid_level.h  utils_d.cpp  utils_d.h
lib/GigaDORAM/single_server_results/: doram_timing_report3.txt
lib/GigaDORAM/src/: 32bitadd_circuit.cpp  CMakeLists.txt  config.cpp  config.h  entries.cpp  entries.h  main.cpp  oram.h
lib/GigaDORAM/test/: CMakeLists.txt
lib/GigaDORAM/test/doram/: doram.cpp
lib/MP-SPDZ/: Dockerfile  backup.txt  brightup.sh
lib/MP-SPDZ/Compiler/: check_shares.py  ecc copy.py  ecc.py  lagrange.py  types.py  zero_bitvec.py
lib/MP-SPDZ/ExternalIO/: bankers-bonus-client.cpp
lib/MP-SPDZ/Networking/: sockets.h
lib/MP-SPDZ/Programs/Source/: add_shares.mpc  add_shares_vec_giga.mpc  add_shares_vec_mal.mpc  bankers_bonus.mpc  oram-bench.py  oram.mpc  oram_2.mpc  oram_honest.mpc  oram_tutorial.mpc  test.mpc  test2.mpc  test_div.mpc  test_lagrange.mpc  test_multi_exp.mpc  test_reshare.mpc  testtt.mpc  tf.mpc
lib/gmp/: gmp.h
mp-spdz-files/Compiler/: ecc.py  types.py
mp-spdz-files/Programs/: add_shares_vec.mpc  analytics.mpc  check_shares.py  ecc copy.py  ecc.py  oram_2.mpc  oram_tutorial_2.mpc
protos/: bootstrap.proto  nizk.proto  riss.proto  threshold_el_gamal.proto  tsps.proto
scripts/: build_docker.zsh  build_docker_honest.zsh  compile_spdz.zsh  local_no_docker.zsh  local_start.zsh  local_start_giga.zsh  local_start_honest.zsh  local_start_mal.zsh  local_start_mal_2.zsh  local_start_spdz.zsh  old_script.zsh  test.zsh  test_build.zsh
scripts/Player-Data/: 01fd4347.0  1f8da365.0  2f9b4cc7.0  37c353d5.0  3ef4b33e.0  4b0981f3.0  7c05f5c6.0  9b270bf9.0  C0.key  C0.pem  C1.key  C1.pem  C10.key  C10.pem  C11.key  C11.pem  C12.key  C12.pem  C13.key  C13.pem  C14.key  C14.pem  C15.key  C15.pem  C16.key  C16.pem  C17.key  C17.pem  C18.key  C18.pem  C19.key  C19.pem  C2.key  C2.pem  C3.key  C3.pem  C4.key  C4.pem  C5.key  C5.pem  (+53 more)
scripts/logs/: oram_2-3-100-10-1-2
src/: CMakeLists.txt  config.cpp  main.cpp
src/crypto/: CMakeLists.txt  garble.cpp
src/crypto/bilinear_group/: CMakeLists.txt  deserializer.cpp  group.cpp  matrix.cpp  serializer.cpp
src/crypto/bookkeeping_proofs/: CMakeLists.txt  setup.cpp
src/crypto/bookkeeping_proofs/create_entry/: prover.cpp  verifier.cpp
src/crypto/bookkeeping_proofs/prove_entry/: CMakeLists.txt  prover.cpp  verifier.cpp
src/crypto/bookkeeping_proofs/u_reg/: CMakeLists.txt  prover.cpp  verifier.cpp
src/crypto/schemes/: CMakeLists.txt
src/crypto/schemes/bls_sig/: CMakeLists.txt  scheme.cpp
src/crypto/schemes/riss/: CMakeLists.txt  riss.cpp  scheme.cpp  sub_protocol.cpp
src/crypto/schemes/secret_sharing/: CMakeLists.txt  commitments.cpp  polynomial.cpp  secret_sharing.cpp  share.cpp
src/crypto/schemes/threshold_el_gamal/: CMakeLists.txt  helpers.cpp  participant.cpp  protocol.cpp
src/crypto/schemes/tots/: scheme.cpp
src/crypto/schemes/tsps/: CMakeLists.txt  key_gen.cpp  matrix_dist.cpp  protocol.cpp  setup.cpp  sign.cpp  verify.cpp
src/home_operator/: CMakeLists.txt  create_entry.cpp  gigadoram.cpp  insert_entry.cpp  insert_entry_giga.cpp  insert_entry_mal.cpp  protocol.cpp  prove_entry.cpp  u_reg.cpp
src/networking/: CMakeLists.txt  bootstrapping.cpp  server.cpp
src/networking/grpc/: CMakeLists.txt  bootstrap.cpp  dkg.cpp  el_gamal.cpp  riss.cpp  tsps.cpp
src/networking/mpc/: CMakeLists.txt  connect.cpp  serialization.cpp
src/user/: CMakeLists.txt  create_entry.cpp  prove_entry.cpp  u_reg.cpp
